Implemented get tweet by id and delete all tweets. Implemented showing tweets list with fragment, viewmodel and adapter.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">TwitSplit</string>
     <string name="add_tweet">Add Tweet</string>
+    <string name="tweet_hint">Enter Tweet</string>
+    <string name="empty_tweet_message">Please enter tweet</string>
+    <string name="space_tweet_message">Tweet not allowed without spaces more than 50 characters</string>
 </resources>
